Git commit prior to merge
